--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <section class="home">
-    <header class="header">-
+    <header class="header">
         <nav class="nav">
         <ul>
             <li>
@@ -44,6 +44,19 @@
         <span class="slogan2"> O Melhor lugar para cuidar do seu estilo</span>
         <img src="images/much-img.png" alt="Barbershop">
     </div>
+</section>
+
+<section class="about">
+    <div class="container">
+<div class="timing">
+<div  class=" overlay">
+<img src="images/classic-cut.png" alt="horarios" class="icon-cut">
+<h3>Horarios</h3>
+</div>
+<div class="experience">
+    Experiencia
+</div>
+</div>
 </section>
 </body>
 </html>
